syntax = "proto3";

import "google/protobuf/any.proto";

option csharp_namespace = "Ingweland.Fog.Inn.Models.Hoh";

message GameDesignResponseDTO
{
  repeated google.protobuf.Any items = 2;
}

