syntax="proto3";

import "google/protobuf/any.proto";

option csharp_namespace = "Ingweland.Fog.Inn.Models.Hoh";

message GameDesignResponseDtoContainer
{
  google.protobuf.Any content = 1;
}
